# klimetrika

./: .gitignore  LICENSE  README.md  docker-compose.yml  entrypoint-minio.sh  fixes.sh  up-and-fix.sh
airstreamprod/: Cargo.toml  Dockerfile
airstreamprod/src/: main.rs
batch/: batch.py  pyscript1.py  run.sh
realtime/: run.sh  stream_consumer.py
