[package]
name = "airstreamprod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.16"
tokio = {version = "1.27.0", features=["full"]}
kafka = "0.9.0"
serde_json = "1.0.96"
rand = "0.8.5"
